examples/sugars/pipe_map_genuine_mismatch.err.expected
error: type mismatch in function call
= note: in argument 2 of .list.map.
pipe_map_genuine_mismatch.kai:8:21
