examples/sugars/pipe_map_genuine_mismatch.kai
# Negative contrast to `pipe_map_wants_apply`: the stage takes neither
# the container nor the element, so this is a real type error and the
# generic `map` mismatch stands — no `|>` suggestion.

fn takes_str(s: String) : Int = string_length(s)

fn main() : Int {
  let r = [1, 2, 3] | takes_str
  print(int_to_string(reduce(r, 0, (acc, x) => acc + x)))
  0
}
